# OpenTree

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  DATA_MODEL.md  GEDCOM_AND_CLOUD.md
scripts/: install_debian.sh  proxmox_create_lxc.sh  proxmox_update_lxc.sh  update_debian.sh
server/: index.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: PersonCard.tsx  TreeView.tsx
src/data/: demoProject.ts
src/domain/: types.ts
src/i18n/: strings.ts
src/services/: projectStore.ts
src/tree/: layout.ts
